tomcat-ingress/tomcat8-jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat8-jenkins
  namespace: default
  labels:
    k8s-app: tomcat8-jenkins
spec:
  ports:
  - port: 80
    targetPort: 8080
    #nodePort: 30001
    protocol: TCP
  selector:
    k8s-app: tomcat8-jenkins
  type: ClusterIP
  #type: NodePort
  #type: LoadBalancer 
  #clusterIP: 192.168.3.14
