tomcat-ingress/tomcat8-ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat8-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #ingress.kubernetes.io/rewrite-target: /
    #ingress.kubernetes.io/app-root: /jenkins
    #ingress.kubernetes.io/add-base-url: "false"
spec:
  #tls:
  #  - secretName: testsecret
  #backend:
  #  serviceName: tomcat8-jenkins
  #  servicePort: 80
  rules:
  - host: jenkins.tomcat.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat8-jenkins
          servicePort: 80
  - host: sample.tomcat.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat8-sample
          servicePort: 80
