tomcat-ingress/tomcat8-ingress-path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat8-path
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #ingress.kubernetes.io/rewrite-target: /
    #ingress.kubernetes.io/app-root: /jenkins
    #ingress.kubernetes.io/add-base-url: "false"
spec:
  #tls:
  #  - secretName: testsecret
  #backend:
  #  serviceName: tomcat8-jenkins
  #  servicePort: 80
  rules:
  - host: tomcat.com
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: tomcat8-jenkins-path
          servicePort: 80
      - path: /sample
        backend:
          serviceName: tomcat8-sample-path
          servicePort: 80
